# ChangeLog for net-misc/flexget
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*flexget-9999 (02 Sep 2010)

  02 Sep 2010; Mike Gilbert <floppymaster@gmail.com> +flexget-9999.ebuild,
  +metadata.xml:
  Add flexget live ebuild
