@@ -1,5 +1,5 @@
-DIST FlexGet-1.0r1845.tar.gz 549346 RMD160 4403c5d6080c568e24d67248e8a4c96453c64aae SHA1 e8554fa032d3ff765a0757e3760c1fabe21eef63 SHA256 86255761e1e94eb38ee0970e3ac68d471d25f30426d854dcb0485e364ba13550
-EBUILD flexget-1.0_beta1845.ebuild 1301 RMD160 7d1cdf7d3fbb76df67455c2b035ae36669edbd25 SHA1 bae9eb91ca10861357c4b285dd5ee466f8dfe5d2 SHA256 547236678065438d6fe192f98cace91346c9018238804ae4a2b80b8ff5258269
-EBUILD flexget-9999.ebuild 1301 RMD160 7d1cdf7d3fbb76df67455c2b035ae36669edbd25 SHA1 bae9eb91ca10861357c4b285dd5ee466f8dfe5d2 SHA256 547236678065438d6fe192f98cace91346c9018238804ae4a2b80b8ff5258269
-MISC ChangeLog 265 RMD160 73c0119088d8c54cc2795c50893b3a75bb5649a7 SHA1 2edcf6f10d5e445b3a8b2036ba8e086438bfb397 SHA256 122a63b5348e47e9b4e9ef0aac4f11764fbc36a9e40239c6e38218f975b139d5
+DIST FlexGet-1.0r1848.tar.gz 549697 RMD160 931d6dc9905fcc4cfc2b502c355e0cfd41d86b7d SHA1 fd6866aadb9b699939efae80c034f66671eae832 SHA256 612ab71b7a77c87e7ebe989491c996011757a5c7a5f1f0949537704ed97587ec
+EBUILD flexget-1.0_beta1848.ebuild 1085 RMD160 000cbb3e98b35ab308395123c8da7c0c915cfd1e SHA1 852b8c873e5e4b7ba5b6c9f5acf974553e387883 SHA256 ec9644405ef143c5d7ecf262eb328007070a820979f65698c0d590864cf2cd61
+EBUILD flexget-9999.ebuild 1025 RMD160 d14d846e8ed02f088b0cd3c3c5ceacf4ba911870 SHA1 16ce1113cdb06c85b6c3a88b014867b38ed7a913 SHA256 d5a4b052313e3dad26ce49a41f9dfaf20825ac82a1b60ca21d3a4aee226a7bb3
+MISC ChangeLog 403 RMD160 781bab09540395e6ea7adb779a2163263484a0c8 SHA1 582b5f2197028863028f265d704078d096b068ae SHA256 70ea405d1b408ebb4302f9f5c4ecef8847f7ab92c17391cdd9a60eef05026bc0
 MISC metadata.xml 258 RMD160 467019215ae2eb96a0d37268257de2b9313fffb3 SHA1 08c15daf5c5332df50f832233d372ba38858c153 SHA256 6af62865b7a6bddc2c096f9e7c3519f086d6dc26d611a550c05fc033c867abf5
