@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*flexget-1.0_beta1848 (29 Dec 2010)
+
+  29 Dec 2010; Mike Gilbert <floppymaster@gmail.com>
+  +flexget-1.0_beta1848.ebuild:
+  Version bump
+
 *flexget-9999 (02 Sep 2010)
 
   02 Sep 2010; Mike Gilbert <floppymaster@gmail.com> +flexget-9999.ebuild,
